[project]
name = "llm-geography-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geographiclib>=2.1",
    "jupyter>=1.1.1",
    "numpy>=2.3.3",
    "openai>=1.107.3",
    "pandas>=2.3.2",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
]
